--- a/style.css
+++ b/style.css
@@ -6,25 +6,30 @@ body{
     margin:0;
     padding-top:13px;
     font-family:'Product Sans Regular';
+    overflow:auto;
 }
 
 /* Top */
 .container{
     display:flex;
+    border:2px solid black ;
+    width:100%;
+    min-width:590px;
+    min-height:20px;
 }
 .home{
-    width:20px;
-    height:20px;
-    /*border:1px solid black;*/
-    margin:2px 230px auto 20px;
+    width:33px;
+    height:33px;
+    border:1px solid black;
+    margin:2px 330px auto 9px;
     background:url('home.png');
     background-size:cover;
     background-repeat:no-repeat;
 }
 .pic{
-    width:25px;
-    height:27px;
-    margin:1px 13px;
+    width:37px;
+    height:37px;
+    margin:1px 13px auto 55px;
     /*border:1px solid black;*/
     border-radius:50%;
     background:url('image.jpg');
@@ -32,20 +37,20 @@ body{
     background-repeat:no-repeat;
 }
 .box{
-    width:10px;
-    height:14px;
+    width:20px;
+    height:24px;
     margin:3px 10px;
     border:2px solid black;
     border-radius:4px;
-    font-size:0.7em;
+    font-size:1.2em;
     font-weight:bold;
     text-align:center;
     padding:2px 3px 1px 1px;
 }
 .dot{
-    width:20px;
-    height:20px;
-    margin:4px 10px;
+    width:30px;
+    height:30px;
+    margin:4px 0px auto 10px;
     background:url('3dots.png');
     background-size:cover;
     background-repeat:no-repeat;
@@ -53,23 +58,24 @@ body{
 .contain{
     margin:50px 50px 70px 50px;
     position:relative;
-    left:70px;
+    left:100px;
     top:30px;
-    font-size:3.4em;
+    font-size:5.4em;
     font-weight:599; 
-    letter-spacing:-6px;
-    
+    letter-spacing:-10px;
+    width:100%;
+    min-width:380px;
 }
 
 /* Google */
 .search{
     position:relative;
-    left:30px;
+    left:40px;
     margin:0 0 10px 0;
 }
 input{
-    width:350px;
-    height:50px;
+    min-width:520px;
+    min-height:60px;
     border-radius:35px;
     background:rgba(0,0,0,0.1);
     border:hidden;
@@ -78,19 +84,21 @@ input{
 }
 input[placeholder]{
     font-weight:480;
+    font-size:1.0em;
 }
 .mic{
     position:relative;
-    right:35px;
-    top:5px;
+    left:480px;
+    bottom:35px;
 }
 
 /* Display */
 .options{
     display:flex;
-    /*border:1px solid black;*/
-    width:380px;
-    height:auto;
+    border:1px solid black;
+    width:100%;
+    min-width:560px;
+    min-height:auto;
     overflow-x:auto;
     margin:0 0 10px 10px;
     padding:0px;
@@ -103,15 +111,18 @@ input[placeholder]{
 /* History */
 .logo{
     display:flex;
-   /* border:1px solid black;*/
-    width:380px;
+    border:1px solid black;
+    width:100%;
+    min-width:480px;
     height:auto;
     overflow-x:scroll;
     margin:0 0 0px 10px;
-    padding:0px;
+    padding:10px;
+    position:relative;
+    left:20px;
 }
 .box2{
-    margin:7px 60px 7px 7px;
+    margin:7px 90px 7px 7px;
     border-radius:50%;
     padding:10px;
    /* border:2px solid black;*/
@@ -120,13 +131,13 @@ input[placeholder]{
     left:30px;
 }
 .text2{
-    margin:0px 70px 5px 53px;
+    margin:0px 125px 5px 53px;
     font-size:0.7em;
     color:rgba(0,0,0,0.6);
 }
 .text3{
     font-size:0.7em;
-    margin:0px 73px 5px 0px;
+    margin:0px 128px 5px 0px;
     color:rgba(0,0,0,0.6);
 }
 .text4{
@@ -134,26 +145,39 @@ input[placeholder]{
     margin:0px 30px 5px 0px;
     color:rgba(0,0,0,0.6);
 }
-
-/* Discover */
+.base1{
+    display:flex;
+    position:relative;
+    left:35px;
+    margin-bottom:30px;
+    width:100%;
+    min-width:460px;
+    min-height:auto;
+    border:2px solid black;
+    
+/* Discover
 .discover{
     display:flex;
-    /*border:1px solid black;*/
-    width:380px;
-    height:auto;
+    position:absolute;
+    top:30px;
+    border:3px solid black;
+    min-width:460px;
+    width:100%;
+    min-height:200px;
     margin:20px 0 0 10px;
     padding:3px;
+  
 }
 .name{
     color:rgba(0,0,0,0.7);
-    font-size:0.9em;
-    margin-right:300px;
+    font-size:1.2em;
+    margin:0 600px 20px 10px;
 }
 .content{
     display:flex;
-    /*border:1px solid black;*/
-    width:380px;
-    height:auto;
+    border:1px solid black;
+    min-width:380px;
+    min-height:auto;
     margin:0 0 0 10px;
     padding:3px;
 }
@@ -167,11 +191,7 @@ input[placeholder]{
     border-radius:7px;
     color:rgba(0,0,0,0.5);
 }
-.base{
-    display:flex;
-    position:relative;
-    margin-bottom:30px;
-}
+
 .text1{
     position:relative;
     top:8px;
@@ -194,9 +214,11 @@ input[placeholder]{
     position:relative;
     left:257px;
     top:6px;
-}
-/* footer */
+} */
+/* footer
 footer{
     color:rgba(0,0,0,0.5);
     font-size:0.7em;
-}
+} */
+
+    
