--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 }
 body{
     margin:0;
-    padding-top:13px;
+    padding-top:23px;
     font-family:'Product Sans Regular';
     overflow:auto;
 }
@@ -14,22 +14,22 @@ body{
     display:flex;
     border:2px solid black ;
     width:100%;
-    min-width:590px;
+    min-width:1500px;
     min-height:20px;
 }
 .home{
-    width:33px;
-    height:33px;
+    width:59px;
+    height:53px;
     border:1px solid black;
-    margin:2px 330px auto 9px;
+    margin:2px 900px auto 19px;
     background:url('home.png');
     background-size:cover;
     background-repeat:no-repeat;
 }
 .pic{
-    width:37px;
-    height:37px;
-    margin:1px 13px auto 55px;
+    width:69px;
+    height:69px;
+    margin:1px 43px auto 185px;
     /*border:1px solid black;*/
     border-radius:50%;
     background:url('image.jpg');
@@ -37,20 +37,20 @@ body{
     background-repeat:no-repeat;
 }
 .box{
-    width:20px;
-    height:24px;
-    margin:3px 10px;
-    border:2px solid black;
-    border-radius:4px;
-    font-size:1.2em;
+    width:30px;
+    height:35px;
+    margin:3px 40px;
+    border:4px solid black;
+    border-radius:8px;
+    font-size:1.7em;
     font-weight:bold;
     text-align:center;
     padding:2px 3px 1px 1px;
 }
 .dot{
-    width:30px;
-    height:30px;
-    margin:4px 0px auto 10px;
+    width:40px;
+    height:55px;
+    margin:4px 0px auto 30px;
     background:url('3dots.png');
     background-size:cover;
     background-repeat:no-repeat;
@@ -58,11 +58,11 @@ body{
 .contain{
     margin:50px 50px 70px 50px;
     position:relative;
-    left:100px;
-    top:30px;
-    font-size:5.4em;
+    left:380px;
+    top:60px;
+    font-size:9.4em;
     font-weight:599; 
-    letter-spacing:-10px;
+    letter-spacing:-18px;
     width:100%;
     min-width:380px;
 }
@@ -70,12 +70,12 @@ body{
 /* Google */
 .search{
     position:relative;
-    left:40px;
+    left:100px;
     margin:0 0 10px 0;
 }
 input{
-    min-width:520px;
-    min-height:60px;
+    min-width:1200px;
+    min-height:130px;
     border-radius:35px;
     background:rgba(0,0,0,0.1);
     border:hidden;
@@ -84,12 +84,12 @@ input{
 }
 input[placeholder]{
     font-weight:480;
-    font-size:1.0em;
+    font-size:3.0em;
 }
 .mic{
     position:relative;
-    left:480px;
-    bottom:35px;
+    left:1140px;
+    bottom:79px;
 }
 
 /* Display */
@@ -97,10 +97,10 @@ input[placeholder]{
     display:flex;
     border:1px solid black;
     width:100%;
-    min-width:560px;
+    min-width:1300px;
     min-height:auto;
     overflow-x:auto;
-    margin:0 0 10px 10px;
+    margin:0 0 10px 60px;
     padding:0px;
 }
 .box1{
@@ -113,7 +113,7 @@ input[placeholder]{
     display:flex;
     border:1px solid black;
     width:100%;
-    min-width:480px;
+    min-width:1300px;
     height:auto;
     overflow-x:scroll;
     margin:0 0 0px 10px;
@@ -122,7 +122,7 @@ input[placeholder]{
     left:20px;
 }
 .box2{
-    margin:7px 90px 7px 7px;
+    margin:7px 130px 7px 117px;
     border-radius:50%;
     padding:10px;
    /* border:2px solid black;*/
@@ -131,18 +131,18 @@ input[placeholder]{
     left:30px;
 }
 .text2{
-    margin:0px 125px 5px 53px;
-    font-size:0.7em;
+    margin:0px 225px 5px 144px;
+    font-size:2.0em;
     color:rgba(0,0,0,0.6);
 }
 .text3{
-    font-size:0.7em;
-    margin:0px 128px 5px 0px;
+    font-size:2.0em;
+    margin:0px 198px 5px 37px;
     color:rgba(0,0,0,0.6);
 }
 .text4{
-    font-size:0.7em;
-    margin:0px 30px 5px 0px;
+    font-size:2.0em;
+    margin:0px 35px 5px 65px;
     color:rgba(0,0,0,0.6);
 }
 .base1{
@@ -151,11 +151,11 @@ input[placeholder]{
     left:35px;
     margin-bottom:30px;
     width:100%;
-    min-width:460px;
+    min-width:1200px;
     min-height:auto;
     border:2px solid black;
     
-/* Discover
+/* Discover*/
 .discover{
     display:flex;
     position:absolute;
@@ -214,11 +214,11 @@ input[placeholder]{
     position:relative;
     left:257px;
     top:6px;
-} */
-/* footer
+} 
+/* footer*/
 footer{
     color:rgba(0,0,0,0.5);
     font-size:0.7em;
-} */
+}
 
     
